# chrontext

./: Cargo.toml  IMPORTANT TODOS  README.md  hello.txt
.github/workflows/: python_linux_release.yml  python_query_tests.yml  python_release.yml  python_windows_release.yml  rust_tests.yml
arrow_python_utils/: Cargo.toml
chrontext/: Cargo.toml
chrontext/src/: combiner.rs  constants.rs  engine.rs  lib.rs  preparing.rs  rewriting.rs  sparql_result_to_polars.rs  static_execution.rs  timeseries_database.rs  timeseries_query.rs
chrontext/src/combiner/: constraining_solution_mapping.rs  join_timeseries.rs  lazy_aggregate.rs  lazy_expressions.rs  lazy_graph_patterns.rs  lazy_order.rs  lazy_triple.rs  solution_mapping.rs  static_subqueries.rs  time_series_queries.rs
chrontext/src/preparing/: expressions.rs  graph_patterns.rs  lf_wrap.rs
chrontext/tests/: common.rs  opcua_data_provider.rs  query_execution.rs  query_execution_arrow_sql.rs  query_execution_benchmark_case.rs  query_execution_opcua.rs  rewrites.rs
dsl/: Cargo.toml
dsl/src/: ast.rs  connective_mapping.rs  costants.rs  lib.rs  parser.rs  translator.rs
dsl/src/translator/: aggregation.rs  graph_pattern.rs  group.rs  path.rs  timestamp_conditions.rs  triples_template.rs
dsl/tests/: ts_api.rs  ts_queries.rs  ts_translation.rs
py_chrontext/: Cargo.toml  pyproject.toml
py_chrontext/src/: errors.rs  lib.rs
py_chrontext/tests/: conftest.py  test_arrow_flight_sql.py  test_opcua.py
py_chrontext/tests/testdata/: expected_dsl_query.csv  testdata_arrow_flight_sql.sparql  testdata_opcua_history_read.sparql
(+80 files in other folders)
