[package]
name = "dsl"
version = "0.1.47"
edition = "2021"

[dependencies]
nom="7.1.1"
chrono="0.4.19"
dateparser="0.1.6"
duration-str="0.3.9"
oxrdf = "0.1.0"
spargebra = "0.2.0"
serde = { version = "1.0.137" }
serde_yaml = "0.8.24"
log="0.4.14"
env_logger = "0.9.0"

[dev-dependencies]
rstest = "0.13.0"
