[package]
name = "py_chrontext"
version = "0.1.56"
edition = "2021"

[workspace]

[dependencies]
pyo3 = {version = "0.16.5", features = ["extension-module"]}
dsl = {path="../dsl"}
chrontext = {path="../chrontext"}
arrow_python_utils = {path="../arrow_python_utils"}
thiserror="1.0.31"
polars-core = {version="0.24.3"}
oxrdf = "0.1.0"
spargebra = "0.2.0"
simple-error = "0.2.3"
tokio="1.20.0"
env_logger = "0.9.0"
log="0.4.17"

[lib]
name = "chrontext"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"